Mail Functionality Implemented

--- a/ItemServices/itemServices.properties
+++ b/ItemServices/itemServices.properties
@@ -14,4 +14,5 @@ remote.server=localhost
 remote.dir=/test/
 remote.knownhost=D:\\External_Project\\Files\\known_hosts
 backup.dir=D:\\External_Project\\FilestoLoad\\
-
+mail.status=KaiNexus Person Import Error(s)
+mail.fatal=KaiNexus Person Import Fatal File Error
