--- a/ItemServices/itemServices.properties
+++ b/ItemServices/itemServices.properties
@@ -1,18 +1,20 @@
 app.frequency=1
 app.stop=true
-item.files.directory=D:\\External_Project\\FilestoLoad
 mail.from=EpicIntegrationTeam@umassmemorial.org
 mail.to=vijay.dunnala@umassmemorial.org
 mail.cc=vijaydunnala@gmail.com
 mail.subject=Test
 items.user=api
-items.key=MTY3Nzg1LTMwZGZmMzdiLTYwOTMtNDFiOS05YjcwLTYwYzk4MGI0ODRhMQ==
+items.key=MTY3OTk3LWNmOTZiMTJlLTYxMGUtNGM2Yi1hN2FiLWRjZWE3NDAzMjcxYQ==
 items.url=https://sandbox-umassmemorial.kainexus.com/api/public/v1/json/user
-remote.user=catsse
-remote.key=+L>%'RY3fSpQ`w
+remote.user=lenovo
+remote.key=Lenovo_89
 remote.server=localhost
-remote.dir=/test/
-remote.knownhost=D:\\External_Project\\Files\\known_hosts
-backup.dir=D:\\External_Project\\FilestoLoad\\
+remote.out=/test/out/
+remote.in=/test/in/
+backup.dir=D:\\External_Project\\FilestoLoad\\bkp\\
 mail.status=KaiNexus Person Import Error(s)
 mail.fatal=KaiNexus Person Import Fatal File Error
+userlist.url=https://sandbox-umassmemorial.kainexus.com/api/public/v1/json/userList
+userlist.mail.subject=
+userlist.mail.body=
