fix mail errors count

--- a/ItemServices/itemServices.properties
+++ b/ItemServices/itemServices.properties
@@ -13,8 +13,9 @@ remote.server=localhost
 remote.out=/test/out/
 remote.in=/test/in/
 backup.dir=D:\\External_Project\\FilestoLoad\\bkp\\
-mail.status=KaiNexus Person Import Error(s)
+mail.error=KaiNexus Person Import Error(s)
 mail.fatal=KaiNexus Person Import Fatal File Error
+mail.sucess=KaiNexus Person Import was Successful
 userlist.url=https://sandbox-umassmemorial.kainexus.com/api/public/v1/json/userList
 userlist.mail.subject=
 userlist.mail.body=
